--- a/style.css
+++ b/style.css
@@ -72,6 +72,7 @@ button {
     background-color: transparent;
     color: whitesmoke;
     border: none;
+    outline: none;
     width: 200px;
     text-align: center;
     height: 80px;
@@ -83,12 +84,14 @@ button {
     transition: 0.3s;
 }
 
-.again:hover {
+.again:hover,
+.again:focus {
     background-color: #00599f;
     box-shadow: none;
 }
 
-.reset:hover {
+.reset:hover,
+.reset:focus {
     background-color: #6f0000;
     box-shadow: none;
 }
@@ -113,6 +116,7 @@ button {
 .square {
     border: 3px solid black;
     position: relative;
+    outline: none;
     display: flex;
     justify-content: center;
     align-items: center;
