--- a/style/style.css
+++ b/style/style.css
@@ -19,12 +19,15 @@ body {
     gap: 35px;
 }
 
-h1 {
+.score {
     display: flex;
     gap: 10px;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+}
+
+h1 {
     text-transform: uppercase;
     text-align: center;
     margin: 0;
